nov 3 complete first

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hello, I am Birendra Jung Rai from Nepal. I am learning web development.">
+    <meta name="keywords" content="Birendra jung rai, Birendra, Birenjung, Nepali web developer, web developer">
+    <meta name="author" content="Birendra Jung Rai">
+    <link rel="icon" type="image/x-icon" href="/img/pro-pic3.jpg">
     <link rel="stylesheet" href="css/style.css">
     <title>Birendra Jung Rai</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ad2db55012.js" crossorigin="anonymous"></script>
     <!-- bts 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -16,13 +21,13 @@
 <body>    
         <div class="container d-flex flex-column align-items-center mt-2 p-2"> 
             <img src="img/pro-pic3.jpg" alt="profile-image" class="pro-pic"> 
-            <h2 class="text-center mt-2" style="color:blue">Hello! <br> I am Birendra Jung Rai from Nepal.</h2>
-            <h4 style="color:red;">I am learning web dev.</h4>
+            <h2 class="text-center mt-2" style="color:#0652DD">Hello! <br> I am Birendra Jung Rai from Nepal.</h2>
+            <h4 style="color:#EA2027;">I am learning web dev.</h4>
         </div>           
         
         <div class="container mt-5">
-            <h2 class="text-center" style="color:blue">My Portfolio</h2>
-            <ul class="filter-menu" style="color:red;">
+            <h2 class="text-center" style="color:#0652DD">My Portfolio</h2>
+            <ul class="filter-menu" style="color:#EA2027;">
                 <li data-target="all">All</li>
                 <li data-target="wordpress">Wordpress</li>
                 <li data-target="e-commerce">E-commerce</li>
@@ -80,13 +85,13 @@
 
         <!-- Social section starts here -->   
         <div class="container text-center my-5"> 
-            <h5 style="color:blue">Lets work together</h5>  
-            <ul style="list-style: none; display:inline-block;" class="social-links mt-2">                
+            <h5 style="color:#0652DD">Lets work together</h5>  
+            <ul class="social-links mt-2">                
                 <li>
-                    <a href="https://github.com/birenjung" target="_blank"><img src="https://img.icons8.com/dotty/50/000000/github.png"/></a>
+                    <a href="https://github.com/birenjung" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </li>   
                 <li>
-                    <a href="https://www.facebook.com/ben.jung.3538" target="_blank"><img src="https://img.icons8.com/dotty/50/000000/facebook-circled.png"/></a>
+                    <a href="https://www.facebook.com/ben.jung.3538" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                 </li>            
             </ul>
         </div>
